add custom text for memo in different languages

--- a/apps/ledger-live-desktop/static/i18n/tr/app.json
+++ b/apps/ledger-live-desktop/static/i18n/tr/app.json
@@ -4899,6 +4899,11 @@
       "memoPlaceholder" : "Tercihe bağlı",
       "memo" : "Memo"
     },
+    "stacks" : {
+      "memoPlaceholder" : "Tercihe bağlı",
+      "memo" : "Memo",
+      "memoWarningText" : "Memo kullanırken, kullanılan türü alıcıyla birlikte dikkatlice doğrulayın"
+    },
     "stellar" : {
       "memo" : "Memo",
       "memoType" : {
