--- a/apps/ledger-live-desktop/static/i18n/es/app.json
+++ b/apps/ledger-live-desktop/static/i18n/es/app.json
@@ -4899,6 +4899,11 @@
       "memoPlaceholder" : "Opcional",
       "memo" : "Memo"
     },
+    "stacks" : {
+      "memoPlaceholder" : "Opcional",
+      "memo" : "Memo",
+      "memoWarningText" : "Al utilizar un Memo, confirma cuidadosamente con el receptor el tipo a utilizar"
+    },
     "stellar" : {
       "memo" : "Memo",
       "memoType" : {
