--- a/apps/ledger-live-desktop/static/i18n/fr/app.json
+++ b/apps/ledger-live-desktop/static/i18n/fr/app.json
@@ -4899,6 +4899,11 @@
       "memoPlaceholder" : "Facultatif",
       "memo" : "Mémo"
     },
+    "stacks" : {
+      "memoPlaceholder" : "Facultatif",
+      "memo" : "Mémo",
+      "memoWarningText" : "Lorsque vous utilisez un mémo, vérifiez bien le type à utiliser auprès du bénéficiaire."
+    },
     "stellar" : {
       "memo" : "Mémo",
       "memoType" : {
