--- a/apps/ledger-live-desktop/static/i18n/de/app.json
+++ b/apps/ledger-live-desktop/static/i18n/de/app.json
@@ -4763,6 +4763,11 @@
     "cta" : "Weiter"
   },
   "families" : {
+    "casper": {
+      "transferIdPlaceholder": "Optional",
+      "transferId": "Transfer ID",
+      "transferIdWarningText": "Die Übertragungs-ID sollte eine positive Zahl kleiner als 18446744073709551615 sein"
+    },
     "cardano" : {
       "memoPlaceholder" : "Optional",
       "memo" : "Memo"
