--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -4782,6 +4782,11 @@
     "cta": "Continue"
   },
   "families": {
+    "casper": {
+      "transferIdPlaceholder": "Optional",
+      "transferId": "Transfer ID",
+      "transferIdWarningText": "Transfer ID should be a positive number smaller than 18446744073709551615"
+    },
     "cardano": {
       "memoPlaceholder": "Optional",
       "memo": "Memo"
