--- a/apps/ledger-live-desktop/static/i18n/hu/app.json
+++ b/apps/ledger-live-desktop/static/i18n/hu/app.json
@@ -3694,6 +3694,11 @@
     "cta": "Enter Ledger app"
   },
   "families": {
+    "casper": {
+      "transferIdPlaceholder": "Választható",
+      "transferId": "Átigazolási azonosító",
+      "transferIdWarningText": "Az átutalás azonosítójának pozitív számnak kell lennie, amely kisebb, mint 18446744073709551615"
+    },
     "stellar": {
       "memo": "Memo",
       "memoType": {
