--- a/apps/ledger-live-desktop/static/i18n/pt-BR/app.json
+++ b/apps/ledger-live-desktop/static/i18n/pt-BR/app.json
@@ -4763,6 +4763,11 @@
     "cta" : "Continuar"
   },
   "families" : {
+    "casper": {
+      "transferIdPlaceholder": "Opcional",
+      "transferId": "ID de transferência",
+      "transferIdWarningText": "O ID da transferência deve ser um número positivo menor que 18446744073709551615"
+    },
     "cardano" : {
       "memoPlaceholder" : "Opcional",
       "memo" : "Memo"
