--- a/apps/ledger-live-desktop/static/i18n/tr/app.json
+++ b/apps/ledger-live-desktop/static/i18n/tr/app.json
@@ -4763,6 +4763,11 @@
     "cta" : "Devam"
   },
   "families" : {
+    "casper": {
+      "transferIdPlaceholder": "Tercihe",
+      "transferId": "geçiş kimliği",
+      "transferIdWarningText": "Aktarım Kimliği, 18446744073709551615'ten küçük pozitif bir sayı olmalıdır"
+    },
     "cardano" : {
       "memoPlaceholder" : "Tercihe bağlı",
       "memo" : "Memo"
