--- a/apps/ledger-live-mobile/src/locales/es/common.json
+++ b/apps/ledger-live-mobile/src/locales/es/common.json
@@ -2130,6 +2130,7 @@
     "details" : "Detalles de {{ currency }}",
     "extra" : {
       "resource" : "Recurso",
+      "transferId": "Identificación de Transferencia",
       "frozenAmount" : "Importe inmovilizado",
       "unfreezeAmount" : "Desinmovilizar importe",
       "address" : "Dirección",
@@ -3377,6 +3378,8 @@
       "maxEstimatedFee" : "Tarifa estimada máx.",
       "validateFees" : "Validar tarifas",
       "customizeFees" : "Personalizar tarifas",
+      "transferId": "Identificación de Transferencia",
+      "validateTransferId": "Validar identificación",
       "memo" : {
         "title" : "Memo",
         "type" : "Tipo de Memo",
