--- a/apps/ledger-live-mobile/src/locales/pt-BR/common.json
+++ b/apps/ledger-live-mobile/src/locales/pt-BR/common.json
@@ -2129,6 +2129,7 @@
     },
     "details" : "detalhes de {{ currency }}",
     "extra" : {
+      "transferId": "ID de transferência",
       "resource" : "Recurso",
       "frozenAmount" : "Quantia Congelado",
       "unfreezeAmount" : "Descongelar Quantia",
@@ -3377,6 +3378,8 @@
       "maxEstimatedFee" : "Taxa máxima estimada",
       "validateFees" : "Validar Taxas",
       "customizeFees" : "Personalizar Taxas",
+      "transferId": "ID de transferência",
+      "validateTransferId": "Validar ID",
       "memo" : {
         "title" : "Memo",
         "type" : "Tipo de memo",
