--- a/apps/ledger-live-mobile/src/locales/de/common.json
+++ b/apps/ledger-live-mobile/src/locales/de/common.json
@@ -2130,6 +2130,7 @@
     "details" : "{{ currency }} Details",
     "extra" : {
       "resource" : "Ressource",
+      "transferId": "Transfer ID",
       "frozenAmount" : "Eingefrorener Betrag",
       "unfreezeAmount" : "Betrag entsperren",
       "address" : "Adresse",
@@ -3377,6 +3378,8 @@
       "maxEstimatedFee" : "Geschätzte max. Gebühr",
       "validateFees" : "Gebühren validieren",
       "customizeFees" : "Gebühren anpassen",
+      "transferId": "Transfer ID",
+      "validateTransferId": "ID validieren",
       "memo" : {
         "title" : "Memo",
         "type" : "Memo-Typ",
