--- a/apps/ledger-live-mobile/src/locales/fr/common.json
+++ b/apps/ledger-live-mobile/src/locales/fr/common.json
@@ -2151,6 +2151,7 @@
       "rewardFrom" : "Récompense de",
       "rewardAmount" : "Montant touché",
       "memo" : "Mémo",
+      "transferId": "ID de transfert",
       "assetId" : "Identifiant de l’actif",
       "rewards" : "Récompenses gagnées",
       "bondedAmount" : "Montant lié",
@@ -3377,6 +3378,8 @@
       "maxEstimatedFee" : "Frais maximaux estimés",
       "validateFees" : "Valider les frais",
       "customizeFees" : "Modifier les frais",
+      "transferId": "ID de transfert",
+      "validateTransferId": "Valider l'identifiant",
       "memo" : {
         "title" : "Mémo",
         "type" : "Type de mémo",
