--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -2129,6 +2129,7 @@
     },
     "details" : "{{ currency }} – сведения",
     "extra" : {
+      "transferId": "Идентификатор передачи",
       "resource" : "Ресурс",
       "frozenAmount" : "Замороженная сумма",
       "unfreezeAmount" : "Разморозить сумму",
@@ -3377,6 +3378,8 @@
       "maxEstimatedFee" : "Макс. ориентировочная комиссия",
       "validateFees" : "Подтвердить комиссию",
       "customizeFees" : "Указать комиссию",
+      "transferId": "Идентификатор передачи",
+      "validateTransferId": "Идентификатор валидара",
       "memo" : {
         "title" : "Memo",
         "type" : "Тип Memo",
