feat(icp): add memo field to lld and other improvements

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -4786,6 +4786,10 @@
       "memoPlaceholder": "Optional",
       "memo": "Memo"
     },
+    "dfinity": {
+      "memoPlaceholder": "Optional, Default: 0",
+      "memo": "Memo"
+    },
     "stellar": {
       "memo": "Memo",
       "memoType": {
