--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -4786,7 +4786,7 @@
       "memoPlaceholder": "Optional",
       "memo": "Memo"
     },
-    "dfinity": {
+    "internet_computer": {
       "memoPlaceholder": "Optional, Default: 0",
       "memo": "Memo"
     },
