--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -5603,5 +5603,12 @@
     },
     "customImageSet": "Custom image set",
     "finishCTA": "Finish"
+  },
+  "discoverProtect": {
+    "new": "New",
+    "title": "With Protect, never lose access to your assets. Ever.",
+    "description": "Protect takes responsibility for protecting your Recovery Phrase, to prevent any asset loss occurring from the theft or loss of your Recovery Phrase, or your Ledger.",
+    "cta": "Discover the benefits",
+    "downloadLLM": "To subscribe, scan the QR code and download our mobile app"
   }
 }
