Update minimum amount error

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -5340,6 +5340,9 @@
     "AvalancheInvalidDateTimeError": {
       "title": "Invalid staking end date selected"
     },
+    "AvalancheMinimumAmountError": {
+      "title": "Minimum amount is 25 AVAX"
+    },
     "HederaAddAccountError": {
       "title": "Your account has not been added. Please try again."
     },
