--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -2321,6 +2321,15 @@
       }
     }
   },
+  "tezos": {
+    "objkt": {
+      "card": {
+        "title": "NFT (Non Fungible Tokens) collection",
+        "description": "You can see you Tezos NFTs directly through Objkt inside Ledger Live.",
+        "cta": "See my NFTs on Objkt"
+      }
+    }
+  },
   "bitcoin": {
     "inputSelected": "SELECTED",
     "toSpend": "Coins to spend",
