--- a/apps/ledger-live-desktop/static/i18n/pt-BR/app.json
+++ b/apps/ledger-live-desktop/static/i18n/pt-BR/app.json
@@ -64,7 +64,7 @@
     "confirm" : "Confirmar",
     "reject" : "Rejeitar",
     "cancel" : "Cancelar",
-    "getSupport" : "Obter Ajuda",
+    "getSupport" : "Obter suporte",
     "delete" : "Remover conta do portfólio",
     "launch" : "Iniciar",
     "continue" : "Continuar",
@@ -102,6 +102,7 @@
     "addressCopied" : "Endereço Copiado",
     "addressCopiedSuspicious" : "Incompatibilidade entre o endereço copiado e o que está na área de transferência.",
     "experimentalFeature" : "Experimental",
+    "featureFlags" : "Incluir Marcadores",
     "information" : "Informações",
     "search" : "Pesquisar...",
     "searchWithoutEllipsis" : "Pesquisar",
@@ -131,7 +132,7 @@
     "nanoS" : "Nano S",
     "nanoSP" : "Nano S Plus",
     "nanoX" : "Nano X",
-    "nanoFTS" : "Nano FTS",
+    "stax" : "Stax",
     "blue" : "Blue"
   },
   "operation" : {
@@ -251,6 +252,8 @@
         "float" : "Flutuante",
         "update" : "Tarifas atualizadas em",
         "loading" : "Carregando...",
+        "loadingQuotes" : "Loading quotes now",
+        "loadingDescription" : "It will only take a moment to find the best options for you.",
         "name" : {
           "title" : "Provedor",
           "tooltip" : "Dependendo do provedor, você precisa se cadastrar criando uma conta."
@@ -1114,7 +1117,7 @@
     },
     "helpCenter" : {
       "title" : "Suporte Ledger",
-      "desc" : "Obter Ajuda"
+      "desc" : "Obter ajuda"
     },
     "ledgerAcademy" : {
       "title" : "Ledger Academy",
@@ -1206,8 +1209,11 @@
         "checkDeviceButton" : "Fazer verificação novamente",
         "cancelButton" : "Talvez mais tarde"
       },
-      "genuineCheckAnimationModal" : {
-        "message" : "Permitir Minha Ledger em {{deviceName}}"
+      "softwareCheckAllowSecureChannelModal" : {
+        "title" : "Permitir Minha Ledger em {{deviceName}}"
+      },
+      "softwareCheckLockedDeviceModal" : {
+        "title" : "Desbloqueie seu dispositivo"
       },
       "helpDrawer" : {
         "title" : "Precisa de ajuda com o seu manual de configuração?",
@@ -1231,16 +1237,16 @@
   },
   "postOnboarding" : {
     "postOnboardingScreen" : {
-      "title" : "Muito bom. Tudo pronto.",
-      "description" : "Parabéns por configurar sua {{deviceName}}!",
-      "paragraph" : "Preparamos alguns passos para você começar. Se você tiver vontade de explorar o Ledger Live por conta própria, não hesite em pular este passo, você pode sempre voltar a ele.",
-      "bottomText" : "Aproveite sua viagem pela Web3 seguramente com o Ledger Live."
+      "title" : "Next up, use your\nLedger Stax to... ",
+      "titleCompleted" : "and that's a\nwrap!"
     },
     "postOnboardingContent" : {
-      "title" : "Muito bom. Tudo pronto.",
-      "description" : "Aqui está o que você pode fazer a seguir:",
-      "skipLink" : "Pular para o aplicativo.",
-      "skipLinkInDrawer" : "Farei isso mais tarde."
+      "skipLink" : "I'll do this later"
+    },
+    "postOnboardingBanner" : {
+      "title" : "What's next for your Ledger Stax?",
+      "description" : "Claim the Infinity NFT, customize it's lock screen, or\ntransfer your assets from other exchanges.",
+      "link" : "See what's next"
     }
   },
   "hideNftCollection" : {
@@ -1423,12 +1429,12 @@
     "detailsPage" : {
       "priceStatistics" : "Estatísticas de preço",
       "tradingVolume" : "Volume de negociação",
-      "24hLowHight" : "Mínomo em 24h / Máximo em 24h",
+      "24hLowHight" : "Mínimo em 24h / Máximo em 24h",
       "7dLowHigh" : "Mínimo em 7d / Máximo em 7d",
       "allTimeHigh" : "Máxima Histórica",
       "allTimeLow" : "Mínima Histórica",
-      "marketCapRank" : "Posição em capitalização de mercado",
-      "marketCapDominance" : "Dominância da capitalização de mercado",
+      "marketCapRank" : "Posição (cap. de mercado)",
+      "marketCapDominance" : "Dominância (cap. de mercado)",
       "supply" : "Oferta",
       "circulatingSupply" : "Oferta em circulação",
       "totalSupply" : "Oferta Total",
@@ -1678,6 +1684,8 @@
       "undelegated" : "Removido de delegação",
       "undelegatedFrom" : "Removido de delegação de",
       "undelegatedAmount" : "Quantia removida de delegação",
+      "withdrawnFrom" : "Sacado de",
+      "withdrawnAmount" : "Quantia Sacada",
       "rewardFrom" : "Recompensa de",
       "memo" : "Memo",
       "assetId" : "ID do ativo",
@@ -1718,7 +1726,7 @@
     "swap" : {
       "notice" : {
         "default" : "Verifique os detalhes da troca no seu dispositivo antes de enviá-la. Os endereços são comunicados com segurança para que você não precise verificá-los.",
-        "cic" : "Verifique os detalhes da troca no seu dispositivo antes de enviá-la. O CIC pode precisar fazer verificações adicionais para algumas transações, resultando em demora."
+        "provider" : "Verifique os detalhes da troca no seu dispositivo antes de enviá-la. {{providerName}} pode precisar fazer verificações adicionais para algumas transações, resultando em demora."
       },
       "confirm" : "Confirmar transação de troca",
       "amountSent" : "Quantia a enviar",
@@ -2176,7 +2184,7 @@
     "title" : "Assinar Transação"
   },
   "releaseNotes" : {
-    "title" : "Notas de versão",
+    "title" : "Notas de lançamento",
     "version" : "Ledger Live {{versionNb}}"
   },
   "troubleshootNetwork" : {
@@ -2230,6 +2238,187 @@
     "amount" : "Quantia",
     "value" : "Valor",
     "header" : "Alocação de conta ({{count}})"
+  },
+  "elrond" : {
+    "summary" : {
+      "availableBalanceTooltip" : "Esta quantia pode ser transferida.",
+      "availableBalance" : "Saldo Disponível",
+      "delegatedAssetsTooltip" : "Os ativos delegados são usados indiretamente pelo provedor de staking para operar nodes validadores, processar transações e proteger a rede participando de um mecanismo de consenso.",
+      "delegatedAssets" : "Ativos Delegados",
+      "undelegatingTooltip" : "Os ativos não delegados ficam sujeitos a um período de desvinculação de 10 dias antes de poderem ser sacados.",
+      "undelegating" : "Saques Pendentes"
+    },
+    "account" : {
+      "subHeader" : {
+        "cardTitle" : "Desenvolvido por MultiversX",
+        "moreInfo" : "Mais Informações",
+        "drawerTitle" : "Integração com MultiversX",
+        "title" : "O token MultiversX eGold (EGLD) agora está disponível no Ledger Live",
+        "description" : "Agora você pode proteger seus tokens eGold (EGLD) e gerenciá-los com segurança através do Ledger Live.",
+        "description2" : "O token MultiversX eGold (EGLD) é nativo da rede MultiversX e será usado para tudo, desde transações, staking, contratos inteligentes, governança e recompensas de validadores.",
+        "description3" : "Estamos trabalhando ativamente com a equipe da MultiversX para adicionar mais funcionalidades, como staking, suporte nativo ao ESDT (Elrond Standard Digital Token) e mais.",
+        "website" : "A Internet Scale Blockchain"
+      }
+    },
+    "delegation" : {
+      "emptyState" : {
+        "description" : "Delegue seu EGLD para proteger a rede e obter a sua parte nas recompensas.",
+        "info" : "O que é um a delegação?",
+        "delegation" : "Receber Recompensas"
+      },
+      "commission" : "Comissão",
+      "claimRewards" : "Resgatar Recompensas",
+      "header" : "Delegações",
+      "noRewards" : "Nenhuma recompensa disponível",
+      "delegate" : "Delegar",
+      "undelegate" : "Desdelegar",
+      "redelegateDisabledTooltip" : "Você pode redelegar em <0>{{days}}</0>",
+      "redelegateMaxDisabledTooltip" : "Você não pode redelegar a mais de <0>7</0> validadores por vez",
+      "undelegateDisabledTooltip" : "Você não pode desdelegar mais de <0>7</0> validadores por vez",
+      "reward" : "Resgatar Recompensas",
+      "currentDelegation" : "Delegado: <0>{{amount}}</0>",
+      "apr" : "APR",
+      "totalStake" : "Total Aplicado",
+      "activeTooltip" : "Quantias delegadas geram recompensas",
+      "inactiveTooltip" : "Quantias desdelegadas não geram recompensas",
+      "minSafeWarning" : "Fundos insuficientes. Você precisa de pelo menos 1 EGLD disponível.",
+      "flow" : {
+        "title" : "Delegar",
+        "steps" : {
+          "amount" : {
+            "title" : "Delegar",
+            "subtitle" : "Aplique seus ativos para um dos seguintes provedores de staking.",
+            "warning" : "Escolha o seu provedor de staking sabiamente. Atualmente, o único risco é o de não obter recompensas por vários motivos, portanto, você deve selecionar um provedor com base em confiabilidade, comunicação e economia.",
+            "fields" : {
+              "validator" : "Provedor de Staking"
+            }
+          },
+          "fields" : {
+            "amount" : "Quantia a aplicar"
+          },
+          "starter" : {
+            "description" : "Você pode obter recompensas delegando os seus ativos EGLD a um Provedor de Staking.",
+            "bullet" : ["Você continua tendo posse dos ativos delegados", "Delegar usando seu dispositivo Ledger", "Os ativos ficarão disponíveis 10 dias após a desdelegação."],
+            "warning" : {
+              "description" : "Escolha o seu provedor de staking sabiamente. Atualmente, o único risco é o de não obter recompensas por vários motivos, portanto, você deve selecionar um provedor com base em confiabilidade, comunicação e economia."
+            }
+          },
+          "validator" : {
+            "title" : "Provedores de Staking"
+          },
+          "connectDevice" : {
+            "title" : "Dispositivo"
+          },
+          "confirmation" : {
+            "title" : "Confirmação",
+            "success" : {
+              "title" : "Você delegou seus ativos com sucesso.",
+              "text" : "O saldo da sua conta será atualizado quando a blockchain confirmar a transação.",
+              "cta" : "Ver Detalhes"
+            },
+            "broadcastError" : "Sua transação pode ter falhado. Aguarde um momento e verifique seu histórico de transações antes de tentar novamente."
+          }
+        }
+      }
+    },
+    "claimRewards" : {
+      "flow" : {
+        "title" : "Resgatar Recompensas",
+        "steps" : {
+          "claimRewards" : {
+            "title" : "Recompensas",
+            "compound" : "Compor recompensas",
+            "claim" : "Resgatar Recompensas",
+            "compoundOrClaim" : "Compor recompensas ou Resgatar recompensas",
+            "compoundDescription" : "As recompensas serão adicionadas à quantia delegada.",
+            "claimDescription" : "As recompensas serão adicionadas ao seu saldo disponível.",
+            "compoundInfo" : "Você recebeu <0>{{amount}}</0>. Ao clicar em Continuar, elas serão resgatadas agora e automaticamente delegadas ao mesmo Provedor de Staking.",
+            "claimInfo" : "Você recebeu <0>{{amount}}</0> do provedor de staking abaixo. Ao clicar em Continuar, elas serão resgatadas agora e automaticamente adicionadas ao saldo disponível.",
+            "selectLabel" : "Selecione uma delegação"
+          },
+          "connectDevice" : {
+            "title" : "Dispositivo"
+          },
+          "confirmation" : {
+            "title" : "Confirmação",
+            "label" : "Confirmação",
+            "success" : {
+              "title" : "O resgate de recompensas foi feito com sucesso",
+              "titleCompound" : "Recompensas compostas com sucesso",
+              "text" : "As recompensas foram adicionadas ao seu saldo disponível",
+              "textCompound" : "Sua transação de <0>{{amount}}</0> EGLD a <0>{{validator}}</0> para compor recompensas foi processada com sucesso.",
+              "cta" : "Ver Detalhes"
+            },
+            "pending" : {
+              "title" : "Transmitindo Transação..."
+            },
+            "broadcastError" : "Sua transação pode ter falhado. Aguarde um momento e verifique seu histórico de transações antes de tentar novamente."
+          }
+        }
+      }
+    },
+    "undelegation" : {
+      "header" : "Desdelegações",
+      "headerTooltip" : "Disponível após o período de desvinculação de 10 dias.",
+      "inactiveTooltip" : "Quantias removidas de delegação não geram recompensas",
+      "withdraw" : {
+        "cta" : "Finalizar Saque"
+      },
+      "flow" : {
+        "title" : "Desdelegar ativos",
+        "steps" : {
+          "amount" : {
+            "title" : "Quantia",
+            "subtitle" : "O processo de desdelegação leva <0>10 dias</0> para ser concluído.",
+            "warning" : "As recompensas serão resgatadas automaticamente. Desdelegar é um processo de 2 etapas: solicitação da desdelegação, seguido por um <0>período de desvinculação de 10 dias</0> após o qual você pode finalizar o saque e a quantia desdelegada será transferida para o seu saldo disponível.",
+            "fields" : {
+              "validator" : "Provedor de Staking",
+              "amount" : "Quantia a desdelegar"
+            }
+          },
+          "device" : {
+            "title" : "Dispositivo"
+          },
+          "confirmation" : {
+            "title" : "Confirmação",
+            "success" : {
+              "title" : "Ativos desdelegados com sucesso.",
+              "description" : "<0>{{amount}}</0> foram desdelegados de <0>{{validator}}</0>.",
+              "cta" : "Ver Detalhes"
+            },
+            "broadcastError" : "Sua transação pode ter falhado. Aguarde um momento e verifique seu histórico de transações antes de tentar novamente."
+          }
+        }
+      }
+    },
+    "withdraw" : {
+      "flow" : {
+        "title" : "Finalizar Saque",
+        "steps" : {
+          "withdraw" : {
+            "title" : "Finalizar Saque",
+            "description" : "Você desdelegou <0>{{amount}}</0> EGLD de <0>{{validator}}</0>. Ao clicar em Continuar, elas serão sacados agora e adicionados novamente automaticamente ao saldo disponível.",
+            "selectLabel" : "Selecione uma desdelegação"
+          },
+          "connectDevice" : {
+            "title" : "Dispositivo"
+          },
+          "confirmation" : {
+            "title" : "Confirmação",
+            "label" : "Confirmação",
+            "success" : {
+              "title" : "Fundos sacados com sucesso",
+              "text" : "A quantia de <0>{{amount}}</0> foi sacada novamente para o seu saldo disponível.",
+              "cta" : "Ver Detalhes"
+            },
+            "pending" : {
+              "title" : "Transmitindo Transação..."
+            },
+            "broadcastError" : "Sua transação pode ter falhado. Aguarde um momento e verifique seu histórico de transações antes de tentar novamente."
+          }
+        }
+      }
+    }
   },
   "cardano" : {
     "account" : {
@@ -2312,6 +2501,15 @@
             }
           }
         }
+      }
+    }
+  },
+  "tezos" : {
+    "objkt" : {
+      "card" : {
+        "title" : "NFT (Non Fungible Tokens) collection",
+        "description" : "You can see you Tezos NFTs directly through Objkt inside Ledger Live.",
+        "cta" : "See my NFTs on Objkt"
       }
     }
   },
@@ -3689,8 +3887,10 @@
       "debugAppsDesc" : "Exibir e permitir a abertura de aplicativos da plataforma etiquetados como de debug",
       "experimentalApps" : "Permitir aplicativos experimentais",
       "experimentalAppsDesc" : "Exibir e permitir a abertura de aplicativos da plataforma etiquetados como experimentais.",
-      "catalogServer" : "Definir o fornecedor do catálogo",
-      "catalogServerDesc" : "Alterne entre múltiplas fontes de aplicativos da plataforma",
+      "catalogUrl" : "Definir o provedor do catálogo de aplicativos",
+      "catalogUrlDesc" : "Inserir a URL personalizada do seu provedor de catálogo",
+      "catalogRampServer" : "Definir os provedores de compra e venda",
+      "catalogRampServerDesc" : "Alternar entre vários provedores de negociação",
       "enablePlatformDevTools" : "Habilitar ferramentas de desenvolvedor da plataforma",
       "enablePlatformDevToolsDesc" : "Habilitar a abertura da janela de ferramentas de desenvolvedor de aplicativos da plataforma",
       "featureFlagsTitle" : "Marcadores definidos usados no Ledger Live",
@@ -3698,6 +3898,9 @@
       "featureFlagsEdit" : "Editar",
       "featureFlagsRestore" : "Restaurar",
       "featureFlagsOverride" : "Sobrepor",
+      "featureFlagsRestoreAll" : "Restaurar valores de todos os marcadores",
+      "showButtonDesc" : "Sempre exibir o botão Incluir Marcadores na barra lateral",
+      "buttonTitle" : "Marcadores desativados localmente",
       "firebaseProject" : "Projeto Firebase mirado por esta versão:",
       "addLocalApp" : "Adicionar um aplicativo local",
       "addLocalAppDesc" : "Navegue por arquivos locais e adicione um aplicativo local usando um manifesto local",
@@ -3752,6 +3955,10 @@
         "experimentalCurrencies" : {
           "title" : "Integrações Experimentais",
           "description" : "Use as integrações experimentais de criptoativos disponíveis."
+        },
+        "experimentalExecutionOnRenderer" : {
+          "title" : "Rede experimental",
+          "description" : "Use a rede experimental para otimizar sua experiência no Ledger Live com a sua VPN. Ative apensas se a sua VPN atual estiver causando erros de sistema."
         },
         "experimentalLanguages" : {
           "title" : "Teste de tradução",
@@ -4994,6 +5201,23 @@
       "title" : "Nenhuma conta encontrada",
       "description" : "Algo deu errado com o cálculo do endereço, tente novamente ou contate o Suporte Ledger"
     },
+    "ElrondDecimalsLimitReached" : {
+      "title" : "Limite máximo de decimais alcançado",
+      "description" : "Certifique-se de que a quantia fornecida tenha 18 decimais."
+    },
+    "ElrondMinDelegatedAmountError" : {
+      "title" : "Quantia delegada deve ser de pelo menos {{formattedAmount}}"
+    },
+    "ElrondMinUndelegatedAmountError" : {
+      "title" : "Quantia desdelegada deve ser de pelo menos {{formattedAmount}}"
+    },
+    "ElrondDelegationBelowMinimumError" : {
+      "title" : "Delegação restante não pode ser menos que {{formattedAmount}}"
+    },
+    "NotEnoughEGLDForFees" : {
+      "title" : "EGLD insuficientes para pagar as taxas de transação",
+      "description" : "Envie um pouco de EGLD para a sua conta para pagar pelas transações."
+    },
     "NotEnoughBalance" : {
       "title" : "Fundos Insuficientes",
       "description" : "Certifique-se de que a conta tem fundos suficientes."
@@ -5493,6 +5717,14 @@
       "title" : "Seu dispositivo está bloqueado",
       "description" : "Desbloqueie seu dispositivo e tente novamente.",
       "descriptionWithProductName" : "Desbloqueie sua {{ productName }} e tente novamente."
+    },
+    "DeviceNotOnboardedError" : {
+      "title" : "Seu dispositivo ainda não está pronto para ser usado",
+      "titleWithProductName" : "{{ productName }} ainda não está pronta para ser usada",
+      "description" : "Você precisa configurar seu dispositivo primeiro.\nVamos guiar você pelo processo de configuração.",
+      "descriptionWithProductName" : "Você precisa configurar sua {{ productName }} primeiro.\nVamos guiar você pelo processo de configuração.",
+      "goToOnboardingButton" : "Configurar meu dispositivo",
+      "goToOnboardingButtonWithProductName" : "Configurar minha {{ productName }}"
     }
   },
   "cryptoOrg" : {
@@ -5555,8 +5787,7 @@
     "postOnboarding" : {
       "title" : "Personalizar meu dispositivo",
       "description" : "Customizando a tela",
-      "actionCompletedPopupLabel" : "Dispositivo personalizado",
-      "actionCompletedHubTitle" : "Essa tela ficou demais."
+      "actionCompletedPopupLabel" : "Dispositivo personalizado"
     },
     "customImageSet" : "Imagem personalizada definida",
     "finishCTA" : "Finalizar"
