File apps/ledger-live-mobile/src/locales/en/common.json was updated on es-ES locale

--- a/apps/ledger-live-mobile/src/locales/es/common.json
+++ b/apps/ledger-live-mobile/src/locales/es/common.json
@@ -421,6 +421,23 @@
       "title" : "No se encontró ninguna cuenta",
       "description" : "Algo ha salido mal en el cálculo de la dirección. Inténtalo de nuevo. Si el problema persiste, guarda los registros con el botón que se muestra a continuación y envíalos al Soporte de Ledger."
     },
+    "ElrondDecimalsLimitReached" : {
+      "title" : "Límite máximo de decimales alcanzado",
+      "description" : "Asegúrate de que el importe proporcionado tenga 18 decimales."
+    },
+    "ElrondMinDelegatedAmountError" : {
+      "title" : "La cantidad delegada debe ser al menos {{formattedAmount}}"
+    },
+    "ElrondMinUndelegatedAmountError" : {
+      "title" : "La cantidad desdelegada debe ser al menos {{formattedAmount}}"
+    },
+    "ElrondDelegationBelowMinimumError" : {
+      "title" : "La delegación restante no puede ser menor a {{formattedAmount}}"
+    },
+    "NotEnoughEGLDForFees" : {
+      "title" : "EGLD insuficientes para pagar las tarifas de transacción",
+      "description" : "Envía EGLD a tu cuenta para pagar las transacciones."
+    },
     "NotEnoughBalance" : {
       "title" : "Fondos insuficientes",
       "description" : "Asegúrate de que la cuenta tenga fondos suficientes."
@@ -831,6 +848,13 @@
       "modalButtonLabelBase" : "Autorizar",
       "modalButtonLabelSettingsVariant" : "Ir a Ajustes",
       "dontPair" : "No emparejar"
+    },
+    "camera" : {
+      "title" : "Authorize camera",
+      "authorizeDescription" : "Please authorize Camera to scan QR codes.",
+      "authorizeButtonTitle" : "Autorizar",
+      "goToSettingsDescription" : "Please authorize Camera in Settings to scan QR codes.",
+      "goToSettingsButtonTitle" : "Ir a Ajustes"
     }
   },
   "fees" : {
@@ -1115,6 +1139,12 @@
     "mostPopular" : "LO MÁS POPULAR"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "¿Quieres instalar las mismas aplicaciones que tenías en el {{deviceName}}?",
+      "titleNoDeviceName" : "¿Quieres instalar las mismas aplicaciones que tenías en tu dispositivo Ledger anterior?",
+      "installCTA" : "Instalar ahora",
+      "skipCTA" : "Lo haré más tarde"
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} min",
       "title" : "El {{ productName }} usa aplicaciones para posibilitar transacciones seguras en la cadena de bloques",
@@ -1126,7 +1156,7 @@
       "loading" : "Cargando...",
       "resolving" : "Resolviendo dependencias",
       "progress" : "Instalando aplicaciones: {{progress}} %",
-      "disclaimer" : "Las aplicaciones el {{ productName }} se usan para aprobar transacciones. Puedes añadirlas o eliminarlas cuando quieras."
+      "disclaimer" : "Agrega o elimina aplicaciones en cualquier momento desde Ledger Live."
     }
   },
   "onboarding" : {
@@ -2116,6 +2146,8 @@
       "undelegated" : "Desdelegado ({{amount}})",
       "undelegatedFrom" : "Desdelegado de",
       "undelegatedAmount" : "Importe desdelegado",
+      "withdrawnFrom" : "Retirado de",
+      "withdrawnAmount" : "Importe retirado",
       "rewardFrom" : "Recompensa de",
       "rewardAmount" : "Importe obtenido",
       "memo" : "Memo",
@@ -2272,12 +2304,6 @@
         "unsupported" : "No compatible",
         "settings" : "Ajustes de aplicación",
         "includeGeneralSettings" : "Importar configuración de Desktop"
-      },
-      "fallback" : {
-        "header" : "Importar cuenta",
-        "title" : "Habilitar cámara",
-        "desc" : "Dentro de Ajustes, habilita la cámara para escanear códigos QR.",
-        "buttonTitle" : "Ir a Ajustes"
       }
     },
     "availableBalance" : "Saldo disponible",
@@ -3622,7 +3648,7 @@
       "title" : "Confirma la operación de permuta en tu dispositivo",
       "alert" : {
         "default" : "Verifica los detalles de la permuta en tu dispositivo antes de enviarla. Las direcciones se intercambian de forma segura por lo que no es necesario verificarlas.",
-        "cic" : "Verifica la información de permuta en tu dispositivo antes de enviarlo. CIC tal vez requiera una verificación adicional para algunas transacciones, lo que puede provocar retrasos."
+        "provider" : "Verifica la información de permuta en tu dispositivo antes de enviar la transacción. {{providerName}} tal vez requiera una verificación adicional para algunas transacciones, lo que puede provocar retrasos."
       },
       "acceptTerms" : "Al validar esta transacción, acepto los <0>términos de uso de\n<0> {{provider}}</0>",
       "notice" : "Verifica los detalles de la permuta en tu dispositivo antes de enviarla. Las direcciones se intercambian de forma segura por lo que no es necesario verificarlas."
@@ -4653,6 +4679,207 @@
       }
     }
   },
+  "elrond" : {
+    "info" : {
+      "available" : {
+        "title" : "EGLD disponibles",
+        "description" : "Este importe se puede transferir."
+      },
+      "delegated" : {
+        "title" : "Activos puestos en participación",
+        "description" : "El proveedor de puesta en participación utiliza indirectamente activos puestos en participación para gestionar nodos validadores, procesar transacciones y proteger la red al participar del mecanismo de consenso."
+      },
+      "undelegating" : {
+        "title" : "Retiros pendientes",
+        "description" : "Tras cancelar la puesta en participación de un activo, dichos activos están sujetos a un período de desvinculación de 10 días antes de efectuar el retiro."
+      },
+      "delegationUnavailable" : {
+        "title" : "Delegación no disponible",
+        "description" : "No hay saldo suficiente disponible en la cuenta para iniciar una nueva delegación."
+      }
+    },
+    "delegation" : {
+      "delegationEarn" : "Pon en participación tus EGLD para proteger la red y obtener tu parte de las recompensas.",
+      "info" : "¿Qué es la puesta en participación y cómo funciona?",
+      "claimRewards" : "Reclamar recompensas",
+      "claimAvailableRewards" : "Reclamar {{amount}}",
+      "header" : "Mi puesta en participación",
+      "Amount" : "Importe",
+      "noRewards" : "No hay recompensas disponibles",
+      "delegate" : "Volver a poner en participación",
+      "undelegate" : "Cancelar la puesta en participación",
+      "reward" : "Reclamar recompensas",
+      "commission" : "Comisión",
+      "iDelegate" : "Delegar",
+      "totalStake" : "Participación total",
+      "stepperHeader" : {
+        "starter" : "Recibir recompensas",
+        "validator" : "Delegar activos",
+        "amountSubTitle" : "Importe a poner en participación",
+        "summary" : "Resumen",
+        "verification" : "Verificación",
+        "selectDevice" : "Seleccionar dispositivo",
+        "connectDevice" : "Conectar dispositivo",
+        "stepRange" : "Paso {{currentStep}} de {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "starter" : {
+            "description" : "Puedes ganar recompensas poniendo en participación tus activos EGLD con un proveedor de puesta en participación.",
+            "steps" : {
+              "0" : "Conservas la propiedad de los activos puestos en participación.",
+              "1" : "Los activos estarán disponibles 10 días después de que se cancele la puesta en participación.",
+              "2" : "Pon en participación con tu dispositivo Ledger."
+            },
+            "warning" : {
+              "description" : "Escoge tu proveedor de puesta en participación con cuidado: en la actualidad, el único riesgo es no obtener recompensas por diversas razones, por lo que debes basar tu elección en factores económicos, de fiabilidad y de comunicación."
+            },
+            "cta" : "Continuar"
+          },
+          "validator" : {
+            "validators" : "Proveedores de puesta en participación",
+            "myDelegations" : "Mi puesta en participación",
+            "cta" : "Continuar",
+            "apr" : "APR: {{amount}}",
+            "totalAvailable" : "Total disponible: <0>{{amount}}</0>",
+            "allAssetsUsed" : "Todos los activos utilizados",
+            "noResultsFound" : "No se encontraron validadores para <0>{{search}}</0>",
+            "currentAmount" : "(+ <0>{{amount}}</0>)"
+          },
+          "amount" : {
+            "assetsRemaining" : "Activos restantes: <0>{{amount}}</0>",
+            "allAssetsUsed" : "Todos los activos utilizados",
+            "minAmount" : "Cantidad mínima: <0>{{min}}</0>",
+            "incorrectAmount" : "Cantidad máxima: <0>{{max}}</0>",
+            "insufficientDelegation" : "El importe de participación total debe ser de al menos 1 {{label}} por proveedor de puesta en participación.",
+            "wrongUndelegations" : "El importe restante de {{label}} puestos en participación debe ser 0 o superior a 1 {{label}} por proveedor de puesta en participación.",
+            "cta" : "Continuar"
+          },
+          "verification" : {
+            "success" : {
+              "title" : "Has puesto en participación tus activos correctamente",
+              "text" : "El saldo de la cuenta se actualizará cuando la red confirme la transacción.",
+              "cta" : "Ver detalles"
+            },
+            "pending" : {
+              "title" : "Transmitiendo transacción..."
+            },
+            "broadcastError" : "Es posible que la transacción haya fallado. Espera un momento y comprueba el historial de transacciones antes de intentarlo de nuevo."
+          }
+        }
+      },
+      "drawer" : {
+        "status" : "Estado",
+        "rewards" : "Recompensas",
+        "active" : "Activo",
+        "inactive" : "Inactivo",
+        "completionDate" : "Fecha de finalización",
+        "redelegatedFrom" : "Redelegados desde",
+        "completionDateHit" : "Completado"
+      }
+    },
+    "claimRewards" : {
+      "stepperHeader" : {
+        "validator" : "Seleccionar recompensa a recibir",
+        "method" : "Reclamar recompensas",
+        "summary" : "Resumen",
+        "selectDevice" : "Seleccionar dispositivo",
+        "connectDevice" : "Conectar dispositivo",
+        "stepRange" : "Paso {{currentStep}} de {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "method" : {
+            "youEarned" : "Has recibido",
+            "byDelegationAssetsTo" : "poniendo en participación activos con",
+            "claimRewards" : "Reclamar recompensas",
+            "reDelegateRewards" : "Poner en participación recompensas",
+            "claimRewardsInfo" : "Se reclamarán ahora y se agregarán al saldo disponible.",
+            "reDelegateRewardsInfo" : "Se reclamarán ahora y se pondrán en participación automáticamente con el mismo proveedor de puesta en participación.",
+            "compoundOrCashIn" : "¿Poner en participación o reclamar las recompensas?",
+            "claimRewardsTooltip" : "Las recompensas se agregarán al saldo disponible",
+            "reDelegateRewardsTooltip" : "Las recompensas se agregarán al importe puesto en participación",
+            "cta" : "Continuar"
+          },
+          "verification" : {
+            "success" : {
+              "claimRewardsSuccess" : "Has reclamado correctamente tus recompensas. Se han agregado al saldo disponible.",
+              "reDelegateRewardsSuccess" : "Tus recompensas se han puesto en participación con el mismo proveedor de puesta en participación.",
+              "text" : "El saldo de la cuenta se actualizará cuando la red confirme la transacción.",
+              "cta" : "Ver detalles"
+            },
+            "pending" : {
+              "title" : "Transmitiendo transacción..."
+            },
+            "broadcastError" : "Es posible que la transacción haya fallado. Espera un momento y comprueba el historial de transacciones antes de intentarlo de nuevo."
+          }
+        }
+      }
+    },
+    "undelegation" : {
+      "stepperHeader" : {
+        "amountSubTitle" : "Importe de la cancelación de la puesta en participación",
+        "summary" : "Resumen",
+        "selectDevice" : "Seleccionar dispositivo",
+        "connectDevice" : "Conectar dispositivo",
+        "stepRange" : "Paso {{currentStep}} de {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "amount" : {
+            "allAssetsUsed" : "Todos los activos seleccionados",
+            "assetsRemaining" : "Activos restantes delegados: <0>{{amount}}</0>",
+            "minAmount" : "Cantidad mínima: <0>{{min}}</0>",
+            "incorrectAmount" : "Cantidad máxima: <0>{{max}}</0>",
+            "minRemaining" : "Mínimo restante: <0>{{min}}</0>"
+          },
+          "verification" : {
+            "success" : {
+              "title" : "Has cancelado la puesta en participación de tus activos correctamente",
+              "text" : "El saldo de la cuenta se actualizará cuando la red confirme la transacción.",
+              "cta" : "Ver detalles"
+            },
+            "pending" : {
+              "title" : "Transmitiendo transacción..."
+            },
+            "broadcastError" : "Es posible que la transacción haya fallado. Espera un momento y comprueba el historial de transacciones antes de intentarlo de nuevo."
+          }
+        }
+      }
+    },
+    "withdraw" : {
+      "stepperHeader" : {
+        "validator" : "Seleccionar recompensa a recibir",
+        "method" : "Reclamar recompensas",
+        "summary" : "Resumen",
+        "selectDevice" : "Seleccionar dispositivo",
+        "connectDevice" : "Conectar dispositivo",
+        "stepRange" : "Paso {{currentStep}} de {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "method" : {
+            "youEarned" : "Has cancelado la puesta en participación",
+            "byDelegationAssetsTo" : "desde",
+            "withdrawInfo" : "Se reclamarán ahora y se agregarán al saldo disponible.",
+            "withdrawTooltip" : "Los retiros se agregarán al saldo disponible",
+            "cta" : "Continuar"
+          },
+          "verification" : {
+            "success" : {
+              "title" : "Has reclamado correctamente tus recompensas. Se han agregado al saldo disponible.",
+              "text" : "El saldo de la cuenta se actualizará cuando la red confirme la transacción.",
+              "cta" : "Ver detalles"
+            },
+            "pending" : {
+              "title" : "Transmitiendo transacción..."
+            },
+            "broadcastError" : "Es posible que la transacción haya fallado. Espera un momento y comprueba el historial de transacciones antes de intentarlo de nuevo."
+          }
+        }
+      }
+    }
+  },
   "tezos" : {
     "AccountHeader" : {
       "title" : "Puedes recibir recompensas delegando tu cuenta",
@@ -5264,7 +5491,8 @@
     "actions" : {
       "redelegate" : "Redelegar",
       "collectRewards" : "Recibir recompensas",
-      "undelegate" : "Desdelegar"
+      "undelegate" : "Desdelegar",
+      "withdraw" : "Retirar"
     }
   },
   "ValidateOnDevice" : {
